SigmaCodebackup3rdSep/objects/Product_Transfer_Inventory_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Difference_quantity__c</fullName>
        <formula>Transferred_Qty__c  -   Received_qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ilp__c</fullName>
        <formula>Inventory_Location_Product_Line_Item__r.Inventory_Location_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>from Ilp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product Line Item</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Product_Transfer_Inv_Tracking</relationshipLabel>
        <relationshipName>Product_Transfer_Inv_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Product_Transfer_Inv_Tracking</relationshipLabel>
        <relationshipName>Product_Transfer_Inv_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Serial Number</label>
        <referenceTo>Product_Serial_Number__c</referenceTo>
        <relationshipLabel>Product_Transfer_Inv_Tracking</relationshipLabel>
        <relationshipName>Product_Transfer_Inv_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Transfer</label>
        <referenceTo>Product_transfer__c</referenceTo>
        <relationshipLabel>Product_Transfer_Inv_Tracking</relationshipLabel>
        <relationshipName>Product_Transfer_Inv_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product_Transfer_Inv_Tracking</relationshipLabel>
        <relationshipName>Product_Transfer_Inv_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged stock</fullName>
                </value>
                <value>
                    <fullName>Missing Stock</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_qty__c</fullName>
        <label>Received qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_ilpli__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To ilpli</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Product_Transfer_Inv_Tracking (To ilpli)</relationshipLabel>
        <relationshipName>Product_Transfer_Inv_Tracking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferred_Qty__c</fullName>
        <label>Transferred Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product Transfer Inventory Tracking</label>
    <nameField>
        <displayFormat>PTIT-{0000}</displayFormat>
        <label>Product Transfer Inventory Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product_Transfer_Inv_Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>